--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-initial-setup (46.3-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jeremy Bícha <jbicha@ubuntu.com>  Fri, 28 Jun 2024 14:34:55 -0400
+
 gnome-initial-setup (46.2-1) unstable; urgency=medium
 
   * New upstream release
