--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-gnome-initial-setup (47~beta-1) UNRELEASED; urgency=medium
+gnome-initial-setup (47~beta-1) unstable; urgency=medium
 
   * New upstream release
+  * Bump Standards Version to 4.7.0
 
- -- Jeremy Bícha <jbicha@ubuntu.com>  Wed, 07 Aug 2024 12:04:19 -0400
+ -- Jeremy Bícha <jbicha@ubuntu.com>  Wed, 07 Aug 2024 12:06:55 -0400
 
 gnome-initial-setup (46.3-1) unstable; urgency=medium
 
