New upstream release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-initial-setup (47~rc-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Alessandro Astone <alessandro.astone@canonical.com>  Fri, 06 Sep 2024 12:25:04 +0200
+
 gnome-initial-setup (47~beta-1) unstable; urgency=medium
 
   * New upstream release
