--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-initial-setup (47.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 16 Sep 2024 15:31:26 +0200
+
 gnome-initial-setup (47~rc-1) unstable; urgency=medium
 
   [ Alessandro Astone ]
