--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gnome-initial-setup (47.0-1) UNRELEASED; urgency=medium
+gnome-initial-setup (47.0-1) unstable; urgency=medium
 
   * New upstream release
 
