--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-initial-setup (47.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jeremy Bícha <jbicha@ubuntu.com>  Thu, 17 Oct 2024 14:41:24 -0400
+
 gnome-initial-setup (47.0-1) unstable; urgency=medium
 
   * New upstream release
